k8s/custom/home-assistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: default
spec:
  ports:
  - name: http
    targetPort: 8123
    port: 8123
  selector:
    app: home-assistant

---
apiVersion: v1
kind: Endpoints
metadata:
  name: home-assistant
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.177.77
    ports:
      - port: 8123
